// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.toMatchDOMSnapshot() options should accept a different page instance 1`] = `
<div class="two">
  TWO
</div>
`;

exports[`.toMatchDOMSnapshot() options should allow overriding the global waitFor setting 1`] = `"Unable to locate element matching selector \\".new\\""`;

exports[`.toMatchDOMSnapshot() options should wait for an element to exist when waitFor is true 1`] = `
<div class="new">
  NEW
</div>
`;
